--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
+
 {
-  "name": "promptdj-midi",
+  "name": "prompt-dj-midi",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,8 +14,7 @@
     "lit": "^3.3.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11"
   }
 }
