--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.12.0",
-    "lit": "^3.3.1"
+    "lit": "^3.3.1",
     "tone": "^15.0.4"  
   },
   "devDependencies": {
