--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "promptdj-without-analzyse",
+  "name": "lofi-music-generator",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,6 +15,6 @@
   "devDependencies": {
     "@types/node": "^22.14.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.3.5"
   }
 }
